--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,17 +1,17 @@
 <footer>
- <div>
-    <a class="logo">
-        <svg class="logo__icon"width="66" height="52">
-            <use src="../images/symbol-defs.svg#icon-Vector-10-2"></use>
+ <div class="container logo">
+    <a href="./index.html" class="logo__link">
+        <svg class="logo__icon" width="66" height="52">
+        <use href="./images/sprite.svg#icon-logo"></use>
         </svg>
     </a>
 
-    <ul>
-       <li><a>Home</a></li>
-       <li><a>About</a></li>
-       <li><a>Service</a></li>
-       <li><a>Menu</a></li>
-       <li><a>Contact</a></li>
+    <ul class="list">
+       <li class="list__link"><a>Home</a></li>
+       <li class="list__link"><a>About</a></li>
+       <li class="list__link"><a>Service</a></li>
+       <li class="list__link"><a>Menu</a></li>
+       <li class="list__link"><a>Contact</a></li>
     </ul>
     <div>
         <p>Subscribe</p>
